<resources>
    <string name="app_name">Progmob Yeyen</string>
    <string name="protein_consume">Protein Consume :</string>
    <string name="tugas_2_tracker_layout">Tugas 2: Tracker Layout</string>
    <string name="enter">Enter</string>
    <string name="total_for_days">Total for days :</string>
    <string name="_100g">100g</string>
    <string name="goal">Goal :</string>
    <string name="_175g">175g</string>
    <string name="needed">Needed :</string>
    <string name="_75g">75g</string>
    <string name="text_hello_world">Hello Progmob 2020 Gokil Parahh</string>
    <string name="hello_progmob_keren_kezia">Hello ProgMob KEREN KEZIA!</string>
    <string name="replace">Replace</string>
    <string name="name">Name</string>
    <string name="help">Help</string>
    <string name="type_here">Type Here</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="red">red</string>
    <string name="green">green</string>
    <string name="blue">blue</string>
    <string name="yellow">yellow</string>
    <string name="row_one">row one</string>
    <string name="row_two">row two</string>
    <string name="row_three">row three</string>
    <string name="row_four">row four</string>
    <string name="tugas_2_tracker_layouttt">Tugas 2 : Tracker Layout</string>
    <string name="textview">TextView</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">NIMNIK</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Bukan NIMNIK</string>
    <string name="invalid_password">Password harus diatas 5 karakter</string>
    <string name="login_failed">Login Gagal</string>
</resources>